--- a/ios/BITG/Base.lproj/LaunchScreen.xib
+++ b/ios/BITG/Base.lproj/LaunchScreen.xib
@@ -1,23 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES">
-	<device id="retina4_7" orientation="portrait">
-		<adaptation id="fullscreen"/>
-	</device>
-	<dependencies>
-		<deployment identifier="iOS"/>
-		<plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
-		<capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
-	</dependencies>
-	<objects>
-		<placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
-		<placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-		<view userInteractionEnabled="NO" contentMode="scaleToFill" id="iN0-l3-epB">
-			<rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
-			<autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-			<color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-			<nil key="simulatedStatusBarMetrics"/>
-			<freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-			<point key="canvasLocation" x="548" y="455"/>
-		</view>
-	</objects>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <dependencies>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
+    </dependencies>
+    <objects>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <view userInteractionEnabled="NO" contentMode="scaleToFill" id="iN0-l3-epB">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="515"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="RDR-Dk-ZBI">
+                    <rect key="frame" x="131" y="198" width="113" height="119"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="119" id="5Cf-43-1EJ"/>
+                        <constraint firstAttribute="width" constant="113" id="IFj-D0-8d0"/>
+                        <constraint firstAttribute="width" secondItem="RDR-Dk-ZBI" secondAttribute="height" multiplier="113:119" id="Q59-VW-ZGC"/>
+                    </constraints>
+                </imageView>
+            </subviews>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="RDR-Dk-ZBI" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Rcz-ra-qdl"/>
+                <constraint firstItem="RDR-Dk-ZBI" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="e0L-LP-q30"/>
+                <constraint firstItem="RDR-Dk-ZBI" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="iGv-14-8fU"/>
+                <constraint firstItem="RDR-Dk-ZBI" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="mgo-Ol-6tf"/>
+            </constraints>
+            <nil key="simulatedStatusBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="471.73913043478262" y="466.40625"/>
+        </view>
+    </objects>
+    <resources>
+        <image name="logo" width="437" height="600"/>
+    </resources>
 </document>
