--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+	android:gravity="center"
+	android:layout_gravity="center"
     android:layout_height="match_parent" android:background="#ffffffff">
-    <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/diamond" android:scaleType="center" />
+    <ImageView
+		android:layout_width="125dp"
+		android:layout_height="135dp"
+		android:src="@drawable/bitg"
+		android:scaleType="fitCenter" />
 </RelativeLayout>
