--- a/ios/BITG/Base.lproj/LaunchScreen.xib
+++ b/ios/BITG/Base.lproj/LaunchScreen.xib
@@ -14,20 +14,19 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="RDR-Dk-ZBI">
-                    <rect key="frame" x="131" y="198" width="113" height="119"/>
+                    <rect key="frame" x="128.5" y="195" width="118" height="125"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="119" id="5Cf-43-1EJ"/>
-                        <constraint firstAttribute="width" constant="113" id="IFj-D0-8d0"/>
-                        <constraint firstAttribute="width" secondItem="RDR-Dk-ZBI" secondAttribute="height" multiplier="113:119" id="Q59-VW-ZGC"/>
+                        <constraint firstAttribute="height" constant="125" id="PQ9-AJ-caW"/>
+                        <constraint firstAttribute="width" constant="118" id="kpj-oe-Dz3"/>
                     </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="RDR-Dk-ZBI" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Rcz-ra-qdl"/>
-                <constraint firstItem="RDR-Dk-ZBI" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="e0L-LP-q30"/>
-                <constraint firstItem="RDR-Dk-ZBI" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="iGv-14-8fU"/>
-                <constraint firstItem="RDR-Dk-ZBI" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="mgo-Ol-6tf"/>
+                <constraint firstItem="RDR-Dk-ZBI" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="EhH-Tp-sSa"/>
+                <constraint firstItem="RDR-Dk-ZBI" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="MXy-at-IE0"/>
+                <constraint firstItem="RDR-Dk-ZBI" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="VUH-Mp-nue"/>
+                <constraint firstItem="RDR-Dk-ZBI" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="yrn-mA-Q3L"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
